Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
Description
Same issue in log4j 1.3: http://issues.apache.org/bugzilla/show_bug.cgi?id=41378
See http://marc.theaimsgroup.com/?l=log4cxx-user&m=116532632924890&w=2.
The log4j.dtd was not updated when support was added for rollingPolicy and triggeringPolicy elements
which results in spurious warnings when processing validation configuration files.