LOGCXX-168: log4j.dtd does not contain rollingPolicy and other o.a.l.r.RFA elements